# dice-util

./: CMakeLists.txt  LICENSE  README.md
inc/: dice.hpp
src/: dice.cpp  main.cpp
